{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 29,
  "lineage": "5626c401-d8db-75ab-4c8b-ae8a828750b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project3_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0220c8498afa4629a",
            "domain": "vpc",
            "id": "eipalloc-0220c8498afa4629a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-235-182-200.compute-1.amazonaws.com",
            "public_ip": "54.235.182.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project3_nat"
            },
            "tags_all": {
              "Name": "project3_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project3_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:internet-gateway/igw-0cae366b5e307391f",
            "id": "igw-0cae366b5e307391f",
            "owner_id": "223412325308",
            "tags": {
              "Name": "project3_igw"
            },
            "tags_all": {
              "Name": "project3_igw"
            },
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project3_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0220c8498afa4629a",
            "connectivity_type": "public",
            "id": "nat-066fd0c9288bedefc",
            "network_interface_id": "eni-07a62e50478900ab2",
            "private_ip": "10.0.93.28",
            "public_ip": "54.235.182.200",
            "subnet_id": "subnet-0301049cb8e946530",
            "tags": {
              "Name": "project3_nat"
            },
            "tags_all": {
              "Name": "project3_nat"
            }
          },
          "dependencies": [
            "aws_eip.project3_nat",
            "aws_internet_gateway.project3_igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:route-table/rtb-0d816736aabcdaa46",
            "id": "rtb-0d816736aabcdaa46",
            "owner_id": "223412325308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066fd0c9288bedefc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.project3_nat",
            "aws_internet_gateway.project3_igw",
            "aws_nat_gateway.project3_nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:route-table/rtb-0ea422159fb211c6b",
            "id": "rtb-0ea422159fb211c6b",
            "owner_id": "223412325308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cae366b5e307391f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f92952cc3227da5",
            "route_table_id": "rtb-0d816736aabcdaa46",
            "subnet_id": "subnet-080bd3ada4d3435eb"
          },
          "dependencies": [
            "aws_eip.project3_nat",
            "aws_internet_gateway.project3_igw",
            "aws_nat_gateway.project3_nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026e2293f9f27cdbe",
            "route_table_id": "rtb-0d816736aabcdaa46",
            "subnet_id": "subnet-0fcac18207861c8c1"
          },
          "dependencies": [
            "aws_eip.project3_nat",
            "aws_internet_gateway.project3_igw",
            "aws_nat_gateway.project3_nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ab60cf61b98f30",
            "route_table_id": "rtb-0ea422159fb211c6b",
            "subnet_id": "subnet-0301049cb8e946530"
          },
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b3d7466d9b9017e",
            "route_table_id": "rtb-0ea422159fb211c6b",
            "subnet_id": "subnet-00a697203b90fa06e"
          },
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:subnet/subnet-080bd3ada4d3435eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080bd3ada4d3435eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "223412325308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:subnet/subnet-0fcac18207861c8c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcac18207861c8c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "223412325308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:subnet/subnet-0301049cb8e946530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0301049cb8e946530",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223412325308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:subnet/subnet-00a697203b90fa06e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a697203b90fa06e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "223412325308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/project3": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094ad8928b543cf6b"
          },
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:223412325308:vpc/vpc-094ad8928b543cf6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04933391c0d9e7129",
            "default_route_table_id": "rtb-0a42bbc12dfae581d",
            "default_security_group_id": "sg-0d7c8679ecfe7d004",
            "dhcp_options_id": "dopt-0d8f900a01cda93ad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-094ad8928b543cf6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a42bbc12dfae581d",
            "owner_id": "223412325308",
            "tags": {
              "Name": "project3_vpc"
            },
            "tags_all": {
              "Name": "project3_vpc"
            }
          }
        }
      ]
    }
  ]
}